--- a/sites/stamped.com/bin/alerts/templates/email_favorite.html.j2
+++ b/sites/stamped.com/bin/alerts/templates/email_favorite.html.j2
@@ -56,7 +56,7 @@
                                                         </td>
                                                         <td width="257" style="line-height:12px;font-size:12px;font-family:Helvetica,Arial,sans-serif;color:#999999;margin:0;padding:0;">
                                                             <h3 style="line-height:14px;font-size:14px;font-family:Helvetica,Arial,sans-serif;color:#595959;font-weight:bold;margin:0 0 5px;padding:0;">Launch Stamped on your iPhone</h3>
-                                                            to view @{{ screen_name }}'s like
+                                                            to view @{{ screen_name }}'s profile
                                                         </td>
                                                     </tr>
                                                 </table>
